# HeComesBot

./: .gitignore  Dockerfile  README.md  app.py  build.py  build_.py  command.py  config.json  config.py  func_defs.py  function_.py  functions.py  personality.json  personality_h.json  pyproject.toml  requirements.txt  societybot.py  utils.py  video.py
artgen/: func_defs.py  functions.py  tree.py
bot/: command.py  image.py  main.py  utils.py
data/: config.json
profiling/: bench_chunk_size.py  bench_cupy_eval.py  bench_cupy_leaf.py  bench_numba_leaf.py  bench_safe_divide.py  profile_video.py
src/hecomes/: config.py
src/hecomes/artgen/: func_defs.py  func_utils.py  functions.py  paths.py  primitives.py  pruning.py  render.py  tree.py  tree_paths.py
src/hecomes/bot/: command.py  image.py  main.py
src/hecomes/cli/: _video_utils.py  image.py  instagram.py  video.py  video_paths.py
src/hecomes/data/: circles.json
src/hecomes/data/personalities/: orbiting.json  personality.json  waves.json
src/hecomes/instagram/: poster.py
src/hecomesbot/artgen/: func_defs.py  func_utils.py  functions.py  render.py  tree.py
src/hecomesbot/bot/: command.py  image.py  main.py
src/hecomesbot/cli/: image.py  video.py
src/hecomesbot/data/: quotes.txt
src/hecomesbot/web/: app.py
src/hecomesbot/web/static/: style.css
static/: app.js  index.html  style.css
web/: app.py
web/static/: app.js  editors.js  index.html  preview.js  renderer.js  state.js  style.css  symbols.js  utils.js
