[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hecomesbot"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "Pillow",
    "flask",
    "markovify",
]

[project.scripts]
hecomesbot-image = "hecomesbot.cli.image:main"
hecomesbot-video = "hecomesbot.cli.video:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hecomesbot" = ["data/*"]
