[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hecomes"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "Pillow",
    "flask",
]

[project.optional-dependencies]
bot = ["markovify"]
instagram = ["cloudinary>=1.36", "requests>=2.28"]

[project.scripts]
hecomes-image = "hecomes.cli.image:main"
hecomes-video = "hecomes.cli.video:main"
hecomes-video-paths = "hecomes.cli.video_paths:main"
hecomes-instagram = "hecomes.cli.instagram:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hecomes" = ["data/*"]
